<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root" android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:fitsSystemWindows="true">
    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/header_height" android:gravity="center_vertical" android:paddingHorizontal="@dimen/space_sm">
        <ImageView android:id="@+id/brand_logo" android:layout_width="40dp" android:layout_height="40dp" android:contentDescription="@string/brand_logo" android:scaleType="fitCenter" android:src="@drawable/frediabetics_logo"/>
        <TextView android:id="@+id/app_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="6dp" android:layout_weight="1" android:gravity="start|center_vertical" android:text="@string/app_name" android:textColor="@color/app_text" android:textSize="@dimen/text_app_title" android:textStyle="bold"/>
        <ImageView android:id="@+id/source_shield" android:layout_width="@dimen/shield_icon_size" android:layout_height="@dimen/shield_icon_size" android:layout_marginEnd="2dp" android:contentDescription="@string/source_protected" android:padding="6dp" android:src="@drawable/ic_shield"/>
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <ScrollView android:id="@+id/dashboard_scroll" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:clipToPadding="false" android:scrollbars="none">
            <LinearLayout android:id="@+id/dashboard_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingStart="@dimen/space_md" android:paddingTop="@dimen/space_xxs" android:paddingEnd="@dimen/space_md" android:paddingBottom="22dp"/>
        </ScrollView>
        <View android:id="@+id/scroll_fade" android:layout_width="match_parent" android:layout_height="22dp" android:layout_gravity="bottom" android:background="@drawable/bg_scroll_fade" android:importantForAccessibility="no"/>
    </FrameLayout>
    <LinearLayout android:id="@+id/bottom_navigation" android:layout_width="match_parent" android:layout_height="@dimen/bottom_navigation_height" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp" android:background="@drawable/bg_nav" android:baselineAligned="false" android:clipToOutline="true" android:gravity="center" android:orientation="horizontal" android:paddingStart="6dp" android:paddingTop="7dp" android:paddingEnd="6dp" android:paddingBottom="5dp" tools:ignore="UnusedAttribute">
        <LinearLayout android:id="@+id/nav_overview" style="@style/NavItem" tools:ignore="UseCompoundDrawables"><ImageView android:id="@+id/nav_overview_icon" style="@style/NavIcon" android:contentDescription="@null" android:src="@drawable/ic_home"/><TextView android:id="@+id/nav_overview_label" style="@style/NavLabel" android:text="@string/overview"/></LinearLayout>
        <LinearLayout android:id="@+id/nav_watch" style="@style/NavItem" tools:ignore="UseCompoundDrawables"><ImageView android:id="@+id/nav_watch_icon" style="@style/NavIcon" android:contentDescription="@null" android:src="@drawable/ic_watch"/><TextView android:id="@+id/nav_watch_label" style="@style/NavLabel" android:text="@string/watch"/></LinearLayout>
        <LinearLayout android:id="@+id/nav_settings" style="@style/NavItem" tools:ignore="UseCompoundDrawables"><ImageView android:id="@+id/nav_settings_icon" style="@style/NavIcon" android:contentDescription="@null" android:src="@drawable/ic_settings"/><TextView android:id="@+id/nav_settings_label" style="@style/NavLabel" android:text="@string/settings"/></LinearLayout>
    </LinearLayout>
</LinearLayout>
